Alignment fixed for small screens

--- a/src/scss/pages/_buy_premium.scss
+++ b/src/scss/pages/_buy_premium.scss
@@ -85,7 +85,9 @@
     }
 
     .plan {
-      height: 100%;
+      @include screen-md {
+        height: 100%;
+      }
     }
 
     .title {
